--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "fin-app",
   "version": "1.0.0",
   "description": "a local electron app for simple financial use cases",
-  "main": "src/main.js",
+  "main": "./src/main.js",
   "scripts": {
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "Malo Le Mestre",
-  "license": "Apache-2.0",
+  "license": "ISC",
   "devDependencies": {
-    "electron": "^28.1.1"
+    "electron": "^26.2.2"
   }
 }
