--- a/package.json
+++ b/package.json
@@ -2,15 +2,45 @@
   "name": "fin-app",
   "version": "1.0.0",
   "description": "a local electron app for simple financial use cases",
-  "main": "./src/main.js",
+  "main": "src/electron.js",
   "scripts": {
-    "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run build && electron ./dist/main.bundle.js",
+    "dev": "webpack serve --mode development",
+    "build": "npm run build:main && npm run build:renderer",
+    "build:main": "webpack --config webpack.main.config.js",
+    "build:renderer": "webpack --config webpack.renderer.config.js"
   },
   "keywords": [],
   "author": "Malo Le Mestre",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^26.2.2"
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.8",
+    "@babel/preset-typescript": "^7.23.3",
+    "@types/chart.js": "^2.9.41",
+    "@types/react": "^18.2.47",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.16",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.9.0",
+    "electron": "^28.1.3",
+    "html-webpack-plugin": "^5.6.0",
+    "postcss": "^8.4.33",
+    "postcss-loader": "^7.3.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "style-loader": "^3.3.4",
+    "tailwindcss": "^3.4.1",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "@types/electron": "^1.6.10",
+    "chart.js": "^4.4.1",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7"
   }
 }
