--- a/tsconfig.main.json
+++ b/tsconfig.main.json
@@ -4,8 +4,8 @@
     "module": "commonjs",
     "lib": ["dom", "es2015", "es2016", "es2017"],
     "allowJs": true,
-    "outDir": "./dist",
     "jsx": "react-jsx",
+    "incremental": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
     "skipLibCheck": true,
