--- a/tsconfig.renderer.json
+++ b/tsconfig.renderer.json
@@ -5,8 +5,8 @@
     "lib": ["dom", "es2015", "es2016", "es2017"],
     "allowJs": true,
     "jsx": "react-jsx",
-    "outDir": "./dist",
     "moduleResolution": "node",
+    "incremental": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
