--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npm run build:main && npm run build:renderer",
     "build:main": "webpack --config webpack.main.config.js",
     "build:renderer": "webpack --config webpack.renderer.config.js",
-    "dev": "concurrently \"npm run dev:renderer\" \"electron .\"",
+    "dev": "concurrently \"npm run dev:renderer\" \"wait-on http://localhost:8080 && npm run dev:main\"",
     "dev:renderer": "webpack serve --config webpack.renderer.config.js --mode development",
     "dev:main": "electron . "
   },
@@ -37,6 +37,7 @@
     "tailwindcss": "^3.4.1",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
+    "wait-on": "^7.2.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
