--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
     "react-chartjs-2": "^5.2.0",
+    "react-router-dom": "^6.21.3",
     "yup": "^1.3.3"
   }
 }
