--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "chart.js": "^4.4.1",
     "formik": "^2.4.5",
     "fs": "^0.0.1-security",
+    "lucide-react": "^0.316.0",
     "path": "^0.12.7",
     "react-chartjs-2": "^5.2.0",
     "react-router-dom": "^6.21.3",
