--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lucide-react": "^0.316.0",
     "path": "^0.12.7",
     "react-chartjs-2": "^5.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.21.3",
     "yup": "^1.3.3"
   }
