--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a local electron app for simple financial use cases",
   "main": "./src/main/main.js",
   "scripts": {
-    "start": "npm run build && electron ./dist/main.bundle.js",
+    "start": "electron ./dist/main.bundle.js",
     "build": "npm run build:main && npm run build:renderer",
     "build:main": "webpack --config webpack.main.config.js",
     "build:renderer": "webpack --config webpack.renderer.config.js",
