--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "finances",
   "version": "1.0.0",
   "description": "a local electron app for simple financial use cases",
-  "main": "./src/main/main.js",
+  "main": "./dist/main.bundle.js",
   "scripts": {
     "start": "electron ./dist/main.bundle.js",
     "build": "npm run build:main && npm run build:renderer",
@@ -10,7 +10,9 @@
     "build:renderer": "webpack --config webpack.renderer.config.js",
     "dev": "concurrently \"npm run dev:renderer\" \"wait-on http://localhost:8080 && npm run dev:main\"",
     "dev:renderer": "webpack serve --config webpack.renderer.config.js --mode development",
-    "dev:main": "electron . "
+    "dev:main": "electron . ",
+    "pack": "electron-builder --dir --mac",
+    "dist": "electron-builder --win --mac --linux"
   },
   "keywords": [],
   "author": "Malo Le Mestre",
@@ -26,8 +28,10 @@
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
     "concurrently": "^8.2.2",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.9.0",
     "electron": "^28.1.3",
+    "electron-builder": "^24.9.1",
     "html-webpack-plugin": "^5.6.0",
     "postcss": "^8.4.33",
     "postcss-loader": "^7.3.4",
@@ -54,5 +58,29 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.21.3",
     "yup": "^1.3.3"
+  },
+  "build": {
+    "appId": "io.dopee.finances",
+    "productName": "Finances",
+    "directories": {
+      "output": "dist_packaged"
+    },
+    "files": [
+      "dist/**/*",
+      "node_modules/**/*",
+      "package.json"
+    ],
+    "win": {
+      "target": "nsis",
+      "icon": "dist/icons/logo.ico"
+    },
+    "mac": {
+      "target": "dmg",
+      "icon": "dist/icons/logo.icns"
+    },
+    "linux": {
+      "target": "AppImage",
+      "icon": "dist/icons/logo.png"
+    }
   }
 }
