--- a/package.json
+++ b/package.json
@@ -18,15 +18,9 @@
   "author": "Malo Le Mestre",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/preset-env": "^7.23.8",
-    "@babel/preset-typescript": "^7.23.3",
     "@types/chart.js": "^2.9.41",
-    "@types/electron": "^1.6.10",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.16",
-    "babel-loader": "^9.1.3",
     "concurrently": "^8.2.2",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.9.0",
@@ -35,25 +29,18 @@
     "html-webpack-plugin": "^5.6.0",
     "postcss": "^8.4.33",
     "postcss-loader": "^7.3.4",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "style-loader": "^3.3.4",
     "tailwindcss": "^3.4.1",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
-    "wait-on": "^7.2.0",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack": "^5.89.0"
   },
   "dependencies": {
     "chart.js": "^4.4.1",
     "formik": "^2.4.5",
-    "fs": "^0.0.1-security",
     "lucide-react": "^0.316.0",
-    "path": "^0.12.7",
     "react-chartjs-2": "^5.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.21.3",
